--- a/client/pages/aois/Aoi.html
+++ b/client/pages/aois/Aoi.html
@@ -5,7 +5,7 @@
     <h3 class="m-t-0">{{aoi.name}}
       {{#if aoi.hasPermission 'update'}}
         {{#unless $.Session.get 'updateAoi'}}
-          &nbsp;<a href="#" class="update-aoi"><i class="fa fa-pencil"></i></a>
+          &nbsp;<a href="" class="update-aoi"><i class="fa fa-pencil"></i></a>
         {{/unless}}
       {{/if}}
     </h3>
