--- a/client/pages/datafiles/DatafilesList.html
+++ b/client/pages/datafiles/DatafilesList.html
@@ -40,10 +40,10 @@
           </td>
           <td>
             {{#if equals datafile.fileFormat 'imotions'}}
-              <span class="label label-default">iMotions</span>
+              <span class="label label-primary">iMotions</span>
             {{/if}}
             {{#if equals datafile.fileFormat 'smi'}}
-              <span class="label label-default">SMI BeGaze</span>
+              <span class="label label-primary">SMI BeGaze</span>
             {{/if}}
           </td>
           <td class="p-l-10">
