--- a/client/pages/datafiles/datafile.html
+++ b/client/pages/datafiles/datafile.html
@@ -5,7 +5,7 @@
     <h3 class="m-t-0">{{datafile.name}}
       {{#if datafile.hasPermission 'update'}}
         {{#unless $.Session.get 'updateDatafile'}}
-          &nbsp;<a href="#" class="update-datafile"><i class="fa fa-pencil"></i></a>
+          &nbsp;<a href="" class="update-datafile"><i class="fa fa-pencil"></i></a>
         {{/unless}}
       {{/if}}
     </h3>
