--- a/client/pages/recordings/Recordings.html
+++ b/client/pages/recordings/Recordings.html
@@ -1,5 +1,5 @@
 <template name="Recordings">
-  <h3 class="m-t-0">Recordings <a href="#" class="btn btn-primary pull-right m-b-10"><i class="fa fa-search m-r-5"></i>Advanced Search</a></h3>
+  <h3 class="m-t-0">Recordings <a href="" class="btn btn-primary pull-right m-b-10"><i class="fa fa-search m-r-5"></i>Advanced Search</a></h3>
   <!-- //TODO https://datatables.net/examples/api/regex.html -->
 
   {{> tabular table=TabularTables.RecordingsByStudy selector=selector class="table table-striped table-bordered"}}
