--- a/client/pages/viewings/Viewing.html
+++ b/client/pages/viewings/Viewing.html
@@ -65,7 +65,7 @@
 
         <div id="instantContinuousGroup" class="form-group {{#if instantContinuousHidden}} hidden {{/if}}">
           <label for="instantContinuous">Instantaneous/Continuous
-            <a href="#">
+            <a href="">
               <span class="glyphicon glyphicon-question-sign"></span>
             </a>
           </label>
@@ -77,7 +77,7 @@
 
         <div id="slideStepGroup" class="form-group {{#if slideStepHidden}} hidden {{/if}}">
           <label for="slideStep">Slide/Step
-            <a href="#">
+            <a href="">
               <span class="glyphicon glyphicon-question-sign"></span>
             </a>
           </label>
@@ -89,7 +89,7 @@
 
         <div id="centroidPeriodGroup" class="form-group {{#if centroidPeriodHidden}} hidden {{/if}}">
           <label for="centroidPeriod">Centroid Period (ms)
-            <a href="#">
+            <a href="">
               <span class="glyphicon glyphicon-question-sign"></span>
             </a>
           </label>
@@ -98,7 +98,7 @@
 
         <div id="fixationTrailLengthGroup" class="form-group {{#if fixationTrailLengthHidden}} hidden {{/if}}">
           <label for="fixationTrailLength">Fixation Trail Length
-            <a href="#">
+            <a href="">
               <span class="glyphicon glyphicon-question-sign"></span>
             </a>
           </label>
