--- a/client/pages/recordings/Recording.html
+++ b/client/pages/recordings/Recording.html
@@ -5,7 +5,7 @@
     <h3 class="m-t-0">{{recording._id}}
       {{#if recording.hasPermission 'update'}}
         {{#unless $.Session.get 'updateRecording'}}
-          &nbsp;<a href="#" class="update-recording"><i class="fa fa-pencil"></i></a>
+          &nbsp;<a href="" class="update-recording"><i class="fa fa-pencil"></i></a>
         {{/unless}}
       {{/if}}
     </h3>
