--- a/client/pages/stimuli/Stimulus.html
+++ b/client/pages/stimuli/Stimulus.html
@@ -5,7 +5,7 @@
     <h3 class="m-t-0">{{stimulus.name}}
       {{#if stimulus.hasPermission 'update'}}
         {{#unless $.Session.get 'updateStimulus'}}
-          &nbsp;<a href="#" class="update-stimulus"><i class="fa fa-pencil"></i></a>
+          &nbsp;<a href="" class="update-stimulus"><i class="fa fa-pencil"></i></a>
         {{/unless}}
       {{/if}}
     </h3>
