--- a/client/pages/variables/Variable.html
+++ b/client/pages/variables/Variable.html
@@ -5,7 +5,7 @@
     <h3 class="m-t-0">{{variable.name}}
       {{#if study.hasPermission 'update'}}
         {{#unless $.Session.get 'updateVariable'}}
-          &nbsp;<a href="#" class="update-variable"><i class="fa fa-pencil"></i></a>
+          &nbsp;<a href="" class="update-variable"><i class="fa fa-pencil"></i></a>
         {{/unless}}
       {{/if}}
     </h3>
