--- a/client/pages/studies/Studies.html
+++ b/client/pages/studies/Studies.html
@@ -1,21 +1,29 @@
 <template name="Studies">
   {{#if Template.subscriptionsReady}}
-    <h3 class="m-t-0">Studies
+    <h3 class="m-t-0">Studies</h3>
+    <h4>
       {{#if isInRole 'create' 'studies'}}
         {{#unless $.Session.get 'newStudy'}}
-          &nbsp;<a class="new-study"><i class="fa fa-plus"></i></a>
+          <a class="new-study btn btn-success"><i class="fa fa-plus"></i>&nbsp;&nbsp;New Study</a>
         {{/unless}}
       {{/if}}
-    </h3>
+    </h4>
+
     {{#if $.Session.get 'newStudy'}}
       {{> NewStudy}}
     {{/if}}
 
-    <ul>
-      {{#each studies}}
-        <li><a href="/studies/{{_id}}/datafiles">{{name}}</a></li>
-      {{/each}}
-    </ul>
+    <div>
+      <table>
+        {{#each studies}}
+          <tr>
+            <td>
+              <a href="/studies/{{_id}}/datafiles">{{name}}</a>
+            </td>
+          </tr>
+        {{/each}}
+      </table>
+    </div>
   {{else}}
     {{> Spinner}}
   {{/if}}
