--- a/client/pages/viewings/ViewingOld.html
+++ b/client/pages/viewings/ViewingOld.html
@@ -38,16 +38,16 @@
           {{/if}}
         </div>
         <div>
-          <strong>Average Convex Hull Size (Slide Method): </strong>
-          {{#if viewing.averageSlideHullSize}}
-            <!-- {{decimalToPercent viewing.averageSlideHullSize}}% -->
-            {{formatNumber viewing.averageSlideHullSize}}
+          <strong>Average Convex Hull Area (Slide Method): </strong>
+          {{#if viewing.averageSlideHullArea}}
+            <!-- {{decimalToPercent viewing.averageSlideHullArea}}% -->
+            {{formatNumber viewing.averageSlideHullArea}}
           {{/if}}
         </div>
         <div>
-          <strong>Average Convex Hull Size (Step Method): </strong>
-          {{#if viewing.averageStepHullSize}}
-            {{decimalToPercent viewing.averageStepHullSize}}%
+          <strong>Average Convex Hull Area (Step Method): </strong>
+          {{#if viewing.averageStepHullArea}}
+            {{decimalToPercent viewing.averageStepHullArea}}%
           {{/if}}
         </div>
       </p>
