viewing player bug fixes

--- a/client/pages/viewings/Viewing.html
+++ b/client/pages/viewings/Viewing.html
@@ -103,7 +103,7 @@
 
         {{#if fixationTrailLengthVisible}}
           <div id="fixationTrailLengthGroup" class="form-group">
-            <label for="fixationTrailLength">Fixation Trail Length
+            <label for="fixationTrailLength">Point Trail Length
               <a href="">
                 <span class="glyphicon glyphicon-question-sign"></span>
               </a>
