--- a/client/pages/analyses/AnalysesList.html
+++ b/client/pages/analyses/AnalysesList.html
@@ -6,7 +6,7 @@
         {{#if analyses.count}}
           {{#if study.datafilesProcessingComplete}}
             <span class="btn btn-danger pull-right reprocess-analyses m-l-10"><i class="fa fa-refresh"></i>&nbsp;&nbsp;Reprocess Analyses</span>
-            <span class="pull-right btn btn-success download-as-csv"><i class="fa fa-table"></i>&nbsp;Download Data as .CSVs</span>
+            <span class="pull-right btn btn-success download-as-csv"><i class="fa fa-table"></i>&nbsp;Download Analyses as .CSVs</span>
           {{/if}}
         {{/if}}
       {{/unless}}
