rename recordings gazepoints, continue working on CSV exports

--- a/client/pages/datafiles/DatafilesList.html
+++ b/client/pages/datafiles/DatafilesList.html
@@ -56,8 +56,8 @@
               {{/if}}
             </td>
             <td class="p-l-10">
-              {{#if datafile.recordings}}
-                {{formatNumber datafile.recordings}}
+              {{#if datafile.gazepoints}}
+                {{formatNumber datafile.gazepoints}}
               {{/if}}
             </td>
             <td class="p-l-10">
