--- a/client/pages/datafiles/datafile.html
+++ b/client/pages/datafiles/datafile.html
@@ -22,18 +22,18 @@
         </tr>
         <tr>
           <th>
-            Gaze Point Count:
+            Gaze Point Count (with duplicates):
           </th>
           <td class="p-l-10">
-            {{formatNumber datafile.gazePointCount}}
+            {{formatNumber datafile.dupGazepointCount}}
           </td>
         </tr>
         <tr>
           <th>
-            Non-duplicate Gaze Point Count:
+            Gaze Point Count:
           </th>
           <td class="p-l-10">
-            {{formatNumber datafile.nonDuplicateGazePointCount}}
+            {{formatNumber datafile.gazepointCount}}
           </td>
         </tr>
         <tr>
