--- a/client/pages/viewings/Viewing.html
+++ b/client/pages/viewings/Viewing.html
@@ -20,15 +20,15 @@
           {{/if}}
         </div>
         <div>
-          <strong>Minimum Recording Time (ms): </strong>
+          <strong>Start Time (ms): </strong>
           {{#if viewing.duration}}
-            {{formatNumber viewing.minRecordingTime}}
+            {{formatNumber viewing.startTime}}
           {{/if}}
         </div>
         <div>
-          <strong>Maximum Recording Time (ms): </strong>
+          <strong>End Time (ms): </strong>
           {{#if viewing.duration}}
-            {{formatNumber viewing.maxRecordingTime}}
+            {{formatNumber viewing.endTime}}
           {{/if}}
         </div>
         <div>
