--- a/client/pages/datafiles/DatafilesList.html
+++ b/client/pages/datafiles/DatafilesList.html
@@ -56,8 +56,10 @@
               {{/if}}
             </td>
             <td class="p-l-10">
-              {{#if datafile.gazepoints}}
-                {{formatNumber datafile.gazepoints}}
+              {{#if study.fixationsOnly}}
+                {{formatNumber datafile.fixationCount}}
+              {{else}}
+                {{formatNumber datafile.gazepointCount}}
               {{/if}}
             </td>
             <td class="p-l-10">
