--- a/client/pages/datafiles/datafile.html
+++ b/client/pages/datafiles/datafile.html
@@ -22,6 +22,22 @@
         </tr>
         <tr>
           <th>
+            Valid Coordinate Count:
+          </th>
+          <td class="p-l-10">
+            {{formatNumber datafile.integerRowCount}}
+          </td>
+        </tr>
+        <tr>
+          <th>
+            Visual Intake Count:
+          </th>
+          <td class="p-l-10">
+            {{formatNumber datafile.visualRowCount}}
+          </td>
+        </tr>
+        <tr>
+          <th>
             Gaze Point Count (with duplicates):
           </th>
           <td class="p-l-10">
