--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -13,9 +13,9 @@
         <span class="pull-right btn btn-success download-as-csv"><i class="fa fa-table"></i>&nbsp;Download Analysis as .CSV</span>
       {{/if}}
 
-      {{#unless analysis.allJobsCompleted}}
+      {{#if equals analysis.status 'processing'}}
         <span class="label label-default">Creating Viewings {{formatNumber analysis.jobsProgress}}%<i class="fa fa-spinner fa-pulse fa-fw m-l-3"></i></span>
-      {{/unless}}
+      {{/if}}
     </h3>
 
     <p>{{analysis.desc}}</p>
