--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -86,7 +86,7 @@
         Viewings ({{viewings.count}})
 
         {{#unless analysis.allJobsCompleted}}
-          <span class="label label-default">Creating Viewings {{formatNumber analysis.viewingsProgress}}%<i class="fa fa-spinner fa-pulse fa-fw m-l-3"></i></span>
+          <span class="label label-default">Creating Viewings {{formatNumber analysis.jobsProgress}}%<i class="fa fa-spinner fa-pulse fa-fw m-l-3"></i></span>
         {{/unless}}
 
         <span class="pull-right btn btn-success download-viewings-as-csv m-b-20"><i class="fa fa-table"></i>&nbsp;Download Viewings as .CSV</span>
